# LecturesStuff

./: README.md  pyproject.toml  requirments.txt
BDD/: add.feature  cucumbers.feature  cucumbers.py  requirments.txt  test_add.py  test_cucumbers_steps.py
CoverageExample/: coveraged_file.py  test_coveragefile.py
Example_Demo/: CurrentStateHolder.py  DataClasses.py  DemoConfig.py  Logic.py  MassagesSimulator.py
Mocking/: test_mocking_example.py
Mutation/: .mutmut-cache  angle.py  report.html  test_angle.py  tutorial.sqlite  tutorial.toml
Testing/: test_assert_exampels.py  test_fixtures.py  test_withpytest.py  test_withunitest.py
